# oli

./: AGENTS.md  README.org  dune  dune-project  oli.install  oli.opam
.cursor/rules/: opam-env.mdc
lib/: app.ml  app.mli  dune  input.ml  input.mli  notty_view.ml  notty_view.mli  project_name.ml  project_name.mli  prompt.ml  prompt.mli  title.ml  title.mli  title_bar.ml  title_bar.mli  username.ml  username.mli  welcome.ml  welcome.mli  width.ml  width.mli
test/: dune
